# CC7515-Computacion-en-GPU

./: .gitignore  .gitmodules  README.md
Proyecto/: Propuesta.txt
Tareas/Tarea_1/: CMakeLists.txt  README.md
Tareas/Tarea_1/src/: CMakeLists.txt  Matrix.cpp  main.cpp
Tareas/Tarea_1/test/: CMakeLists.txt  test.cpp
Tareas/Tarea_2/: CMakeLists.txt  README.md  compare_times_cuda.py  compare_times_opencl.py  cuda_times.py  opencl_times.py  serial_times.py  speedup.py
Tareas/Tarea_2/src/: CMakeLists.txt  cuda.cu  kernel.cl  serial.cpp  tpb.cpp  tpb.cu
